welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: type mismatch;
 found   : Int(5)
 required: Boolean
  return 115%10
            ^