welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
  return 115%10
}